--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+<div>
+	<button type="button">Click Me!</button> 
+	<button type="button">Click Me!</button> Answer: Inline
+</div>
+	<div> 
+		Answer: Inline
+	</div>
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
