--- a/main.html
+++ b/main.html
@@ -10,9 +10,10 @@
 	<!-- the entire body must be written by student -->
 
 <div>
-	<button type="button">Click Me!</button> 
-	<button type="button">Click Me!</button> Answer: Inline
+	<button type="button" data-ns-test="block-inline-h1">Click Me!</button> 
+	<button type="button" data-ns-test="block-inline-h1">Click Me after!</button> 
 </div>
+	
 	<div> 
 		Answer: Inline
 	</div>
