--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
 
 <div>
-	<button type="button" data-ns-test="block-inline-h1">Click Me!</button> 
-	<button type="button" data-ns-test="block-inline-h1">Click Me after!</button> 
+	<button type="button" data-ns-test="block-inline">Click Me!</button> 
+	<button type="button" data-ns-test="block-inline">Click Me after!</button> 
 </div>
 	
 	<div> 
