--- a/main.html
+++ b/main.html
@@ -9,14 +9,11 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-<div>
-	<button type="button" data-ns-test="block-inline">Click Me!</button> 
-	<button type="button" data-ns-test="block-inline">Click Me after!</button> 
-</div>
-	
-	<div> 
-		Answer: Inline
-	</div>
+<div class="container">
+        <!-- Test Block Element -->
+        <div class="test-element" data-ns-test="block-element">Block Element 1</div>
+        <div class="test-element" data-ns-test="block-element">Block Element 2</div>
+    </div>
 
 	
     <script type="text/javascript" src="./script.js">
