--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
 
 <div class="container">
         <!-- Test Block Element -->
-        <div class="test-element" data-ns-test="block-element">Block Element 1</div>
-        <div class="test-element" data-ns-test="block-element">Block Element 2</div>
+        <button  data-ns-test="block-inline-button">Block Element 1</button>
+        <button data-ns-test="block-inline-button">Block Element 2</button>
     </div>
 
 	
